up to Updates, unfinished

--- a/hwk4-task1-whitney-map.ipynb
+++ b/hwk4-task1-whitney-map.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "First, update the following cell to have a link to your Homework 4 GitHub repository\n",
     "\n",
-    "**UPDATE THIS LINK** https://github.com/carmengg/eds-220-hwk-4\n",
+    "**UPDATE THIS LINK** https://github.com/floraham/eds220-hwk-4.git\n",
     "\n",
     "Add comments for all your code and commit as needed. Err on the side of commenting and commiting too much for now.\n",
     "\n",
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4bc3d98b-7091-4a65-8a3b-5206cf2276d8",
    "metadata": {},
    "outputs": [],
@@ -74,12 +74,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "8d8ea3c8-eccd-4b7f-8823-bf62105aadc9",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "# import libraries and functions here\n"
+    "# import libraries and functions here\n",
+    "import os\n",
+    "import numpy as np \n",
+    "import pandas as pd \n",
+    "import geopandas as gpd\n",
+    "import matplotlib.pyplot as plt \n",
+    "import matplotlib.patches as mpatches # for creating legends \n",
+    "import shapely\n",
+    "import xarray as xr \n",
+    "import rioxarray as rioxr \n",
+    "import geopandas as gpd \n",
+    "\n",
+    "\n",
+    "from rasterio.features import rasterize #for rasterizing polygons "
    ]
   },
   {
@@ -96,31 +111,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "795dd4f7-9ebe-4966-8e3a-44b77711b5eb",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "# 1"
+    "# 1\n",
+    "\n",
+    "lulc = rioxr.open_rasterio(os.path.join(os.getcwd(),'data', 'land_cover.tif'))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "a66bfebc-22f2-49a8-a731-d499b315f9e4",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "# 2"
+    "# 2\n",
+    "\n",
+    "ca = gpd.read_file('~/eds220-hwk-4/data/California_Fire_Perimeters/California_Fire_Perimeters_2017.shp')"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "b27d8aea-c7a2-4776-a0b2-283b22b98d36",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "source": [
@@ -130,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "4d1fb42c-82b4-4866-9577-2ec30603c6e6",
    "metadata": {},
    "outputs": [],
@@ -149,12 +169,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "bd817fac-0186-475f-9187-17b8bb11d067",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                  geometry\n",
+      "0  POINT (36.578 -118.292)\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# Mount Whitney coordinates (latitude, longitude)\n",
+    "coordinates = (36.5785, -118.2923)\n",
+    "\n",
+    "# Create a GeoDataFrame with a single point representing Mount Whitney\n",
+    "mt_whitney = gpd.GeoDataFrame(geometry=[shapely.Point(coordinates)])\n",
+    "\n",
+    "# Print the GeoDataFrame\n",
+    "print(mt_whitney)\n",
+    "\n"
    ]
   },
   {
@@ -169,12 +208,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "e33ffffa-ca1d-46fc-a309-6e31d757fbb9",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "\n",
+    "\n",
+    "##lowercase column names \n",
+    "ca.columns = ca.columns.str.lower()\n",
+    "\n",
+    "#clean up \"Year_\" to be just \"year\" \n",
+    "ca.rename(columns={'year_': 'year'}, inplace=True)\n",
+    "\n",
+    "#check data types. It looks like 1) object id needs to be \"str\", 2) alarm_date, cont_date need to be date time\n",
+    "ca.dtypes\n",
+    "\n",
+    "\n",
+    "#converting alarm_date to datetime\n",
+    "ca.alarm_date = pd.to_datetime(ca.alarm_date)\n",
+    "\n",
+    "#converting cont_date to datetime \n",
+    "ca.cont_date = pd.to_datetime(ca.cont_date) \n",
+    "\n",
+    "\n",
+    "##cleaning lulc \n",
+    "#lulc.squeeze()"
    ]
   },
   {
@@ -194,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "b56ced71-c9ef-45e3-b4f8-27361d1fe5e7",
    "metadata": {
     "tags": []
