--- a/hwk4-task2-false-color.ipynb
+++ b/hwk4-task2-false-color.ipynb
@@ -87,15 +87,14 @@
     "import os\n",
     "import numpy as np \n",
     "import pandas as pd \n",
-    "import geopandas as gpd\n",
     "import matplotlib.pyplot as plt \n",
-    "import matplotlib.patches as mpatches # for creating legends \n",
+    "import matplotlib.patches as mpatches # creating legends \n",
     "import shapely\n",
     "import xarray as xr \n",
     "import rioxarray as rioxr \n",
     "import geopandas as gpd \n",
     "from shapely.geometry import Polygon\n",
-    "from rasterio.features import rasterize #for rasterizing polygons \n",
+    "from rasterio.features import rasterize # rasterizing polygons \n",
     "\n",
     "# Open the NetCDF file using regular open_rasterio() method\n",
     "landsat = rioxr.open_rasterio(os.path.join(os.getcwd(), 'data', 'landsat8-2018-01-26-sb-simplified.nc'))\n",
@@ -164,13 +163,12 @@
     "import pandas as pd \n",
     "import geopandas as gpd\n",
     "import matplotlib.pyplot as plt \n",
-    "import matplotlib.patches as mpatches # for creating legends \n",
+    "import matplotlib.patches as mpatches #creating legends \n",
     "import shapely\n",
     "import xarray as xr \n",
     "import rioxarray as rioxr \n",
-    "import geopandas as gpd \n",
     "from shapely.geometry import Polygon\n",
-    "from rasterio.features import rasterize #for rasterizing polygons "
+    "from rasterio.features import rasterize #rasterizing polygons "
    ]
   },
   {
@@ -431,7 +429,7 @@
     }
    ],
    "source": [
-    "#xploring the datasets\n",
+    "#Exploring the datasets\n",
     "\n",
     "#checking out the dataset structure\n",
     "ca_fire.head(5)"
@@ -835,6 +833,7 @@
     }
    ],
    "source": [
+    "#looking at the landsat data\n",
     "landsat"
    ]
   },
