--- a/hwk4-task2-false-color.ipynb
+++ b/hwk4-task2-false-color.ipynb
@@ -5,7 +5,7 @@
    "id": "1021ffb5-434f-41b8-8ef6-8be99a724583",
    "metadata": {},
    "source": [
-    "## Title: Landsat 8 false color image of Thomas Fire Burn Scar\n",
+    "## Title: Visualizing the Thomas Fire Burn Scar & the fire's impacts on Air Quality Index \n",
     "#### Author: Flora Hamilton \n",
     "#### Link: https://github.com/floraham/eds220-hwk-4\n",
     "\n",
